--- a/blogposts.html
+++ b/blogposts.html
@@ -17,23 +17,19 @@
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
   </ul>
+
   </section>
- <div class="line_break"></div>
+   <div class="line_break"></div>
 
-  <h1 id="HeadingIndexPage">Aspiring Web Developer</h1>
-  <p>Follow my journey as I learn new skills at Dev Bootcamp!</p>
+<h1 id="Heading">Blog Posts</h1>
 
-
-<section id="icons">
-<ul>
-<li><a href="https://www.github.com/psaigal"><img src="webicon-github.png"/></a></li>
-<li><a href="https://www.linkedin.com/pub/priyanka-saigal/56/4ab/503"><img src="webicon-linkedin.png"/></a></li>
-<li><a href="https://plus.google.com/100529383494509522614/posts"><img src="webicon-googleplus.png"/></a></li>
-<li><a href="https://twitter.com/priyankasaigal"><img src="webicon-twitter.png"/></a></li>
-</ul>
- </section>
-
-
+<section id="blogs">
+  <ol>
+  <li><a href="culturalblog.html">Chef's Kitchen</a><br><p class="date">June 13, 2015</p></li>
+  <li><a href="Gitandgithub.html">Git and GitHub</a><br><p class="date">June 13, 2015</p></li>
+  <li><a href="t2-css-design.html">CSS Positioning</a><br><p class="date">June 20,2015</p></li>
+</ol>
+  </section>
 
 
 
