--- a/contact.html
+++ b/contact.html
@@ -3,11 +3,11 @@
   <head>
    <title>Priyanka's Website
     </title>
-    <link href="default.css" rel="stylesheet" type="text/css">
+    <link href="cssDBC.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
-
+  
  <section id="menu">
   <ul>
     <li><a href="index.html" class="menubar">Home</a></li>
@@ -19,12 +19,8 @@
   </ul>
   </section>
  <div class="line_break"></div>
-
-  <h1 id="HeadingIndexPage">Aspiring Web Developer</h1>
-  <p>Follow my journey as I learn new skills at Dev Bootcamp!</p>
-
-
-<section id="icons">
+ 
+ <section id="icons">
 <ul>
 <li><a href="https://www.github.com/psaigal"><img src="webicon-github.png"/></a></li>
 <li><a href="https://www.linkedin.com/pub/priyanka-saigal/56/4ab/503"><img src="webicon-linkedin.png"/></a></li>
@@ -32,11 +28,8 @@
 <li><a href="https://twitter.com/priyankasaigal"><img src="webicon-twitter.png"/></a></li>
 </ul>
  </section>
-
-
-
-
-
+ 
+ <h1 id="HeadingIndexPage">Contact Information Coming Soon!</h1>
 
   </body>
 </html>
