--- a/blogposts.html
+++ b/blogposts.html
@@ -25,9 +25,11 @@
 
 <section id="blogs">
   <ol>
-  <li><a href="culturalblog.html">Chef's Kitchen</a><br><p class="date">June 13, 2015</p></li>
-  <li><a href="Gitandgithub.html">Git and GitHub</a><br><p class="date">June 13, 2015</p></li>
+  <li><a href="c1-chefs-kitchen.html">Chef's Kitchen</a><br><p class="date">June 13, 2015</p></li>
+  <li><a href="t1-git-blog.html">Git and GitHub</a><br><p class="date">June 13, 2015</p></li>
   <li><a href="t2-css-design.html">CSS Positioning</a><br><p class="date">June 20,2015</p></li>
+    <li><a href="t3-arrays-hashes.html">Arrays and Hashes</a><br><p class="date">June 25,2015</p></li>
+  <li><a href="c3-thinking-style.html">Thinking Style and Learning</a><br><p class="date">June 25,2015</p></li>
 </ol>
   </section>
 
