--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
    <title>Priyanka's Website
     </title>
-    <link href="default.css" rel="stylesheet" type="text/css">
+    <link href="blogposts.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -21,7 +21,7 @@
  <div class="line_break"></div>
 
   <h1 id="HeadingIndexPage">Aspiring Web Developer</h1>
-  <p>Follow my journey as I learn new skills at Dev Bootcamp!</p>
+  <p><span style="font-size:30px">Follow my journey as I learn new skills at Dev Bootcamp!</span></p>
 
 
 <section id="icons">
