--- a/c1-chefs-kitchen.html
+++ b/c1-chefs-kitchen.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <title>Priyanka's Website</title>
-    <link href="default.css" rel="stylesheet" type="text/css">
+    <link href="blogposts.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
