--- a/t2-css-design.html
+++ b/t2-css-design.html
@@ -2,7 +2,7 @@
 <html>
   <head>
    <title>Priyanka's Website</title>
-    <link href="default.css" rel="stylesheet" type="text/css">
+    <link href="blogposts.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -37,14 +37,14 @@
 
 <h5>Relative Positioning</h5>
 
-<p>Relative positioning allows an element to be positioned relative to its original position. If an element has a relative position, it can move according to the right, left, top, or bottom properties. The HTML for this example shows that Block 1 moves 200px to the left of its original position while Block 2 moves 500px to the left of its original position.</p>
+<p>Relative positioning allows an element to be positioned relative to its original position. If an element has a relative position, it can move according to the "right", "left","top", or "bottom" properties. The HTML for this example shows that Block 1 moves 200px to the left of its original position while Block 2 moves 500px to the left of its original position.</p>
   <p><img src="CSS Blog Images/Relative.png"style="width:700px;height:351px";></p>
   <p><img src="CSS Blog Images/Relative1.png"></p>
 
 
 <h5>Absolute Positioning</h5>
 <p>
-Absolute positioning allows an element to be positioned according to the specified location. When an element has a position of absolute, it will be moved relative to the next parent element that has a position of "relative" and "absolute". If such a parent element does not exist, the element will be positoned relative to the <html> element (the webpage). In addition, the element will not affect or be affected by the positioning of other elements. Elements that have a position of absolute do not follow the normal flow of the webpage. In the example below, Block 2 is positioned relative to its parent element, Block 1, which is set to the position absolute. Furthermore, Block 1 is positioned relative to the webpage.
+Absolute positioning allows an element to be positioned according to the specified location. When an element has a position of absolute, it will be moved relative to the next parent element that has a position of "relative" or "absolute". If such a parent element does not exist, the element will be positoned relative to the <html> element (the webpage). In addition, the element will not affect or be affected by the positioning of other elements. Elements that have a position of absolute do not follow the normal flow of the webpage. In the example below, Block 2 is positioned relative to its parent element, Block 1, which is set to the position absolute. Furthermore, Block 1 is positioned relative to the webpage.
 </p>
  <p><img src="CSS Blog Images/Absolute.png"style="width:700px;height:351px";></p>
   <p><img src="CSS Blog Images/Absolute1.png"></p>
