--- a/t3-arrays-hashes.html
+++ b/t3-arrays-hashes.html
@@ -24,7 +24,7 @@
 
 <section id="blogs">
 
-<section id="quote"><blockquote>"Why did the programmer quit his job?"</blockquote>
+<section id="quote"><blockquote>Why did the programmer quit his job?</blockquote>
 <p><span style="font-size:25px">Because he didn't get arrays</span></p>
 </section>
 <hr>
