--- a/blogposts.html
+++ b/blogposts.html
@@ -3,7 +3,7 @@
   <head>
    <title>Priyanka's Website
     </title>
-    <link href="default.css" rel="stylesheet" type="text/css">
+    <link href="blogposts.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
