arrays and hashes

--- a/t3-arrays-hashes.html
+++ b/t3-arrays-hashes.html
@@ -29,7 +29,7 @@
 </section>
 <hr>
 
-<p>Programming can get messy. Often times, you have to deal with lists, It is important to keep information organized to easily reference it when necessary. This is where arrays and hashes come in handy! Arrays and hashes make it easy to store and look up data.</p>
+<p>Programming can get messy. Often times, you have to deal with large amounts of data. It is important to keep information organized to easily reference it when necessary. This is where arrays and hashes come in handy! Arrays and hashes make it easy to store and look up data.</p>
 
 <h5>Arrays</h5>
 <p>Arrays are collections of objects (such as strings, numbers, hashes, arrays, classes, Booleans, etc.) that are ordered by index numbers. Each index points to a different object, and the numbering starts at 0. The end of an array numbering starts at -1. Arrays are more useful when the order is important.</p>
