--- a/blogposts.html
+++ b/blogposts.html
@@ -12,8 +12,8 @@
   <ul>
     <li><a href="index.html" class="menubar">Home</a></li>
     <li><a href="blogposts.html" class="menubar">Blog Posts</a></li>
-    <li><a href="projects.html" class="menubar">Projects</a></li>
-    <li><a href="interestinglinks.html" class="menubar">Interesting Links</a></li>
+    <li><a href="" class="menubar">Projects</a></li>
+    <li><a href="" class="menubar">Interesting Links</a></li>
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
   </ul>
@@ -27,9 +27,11 @@
   <ol>
   <li><a href="c1-chefs-kitchen.html">Chef's Kitchen</a><br><p class="date">June 13, 2015</p></li>
   <li><a href="t1-git-blog.html">Git and GitHub</a><br><p class="date">June 13, 2015</p></li>
-  <li><a href="t2-css-design.html">CSS Positioning</a><br><p class="date">June 20,2015</p></li>
-    <li><a href="t3-arrays-hashes.html">Arrays and Hashes</a><br><p class="date">June 25,2015</p></li>
-  <li><a href="c3-thinking-style.html">Thinking Style and Learning</a><br><p class="date">June 25,2015</p></li>
+  <li><a href="t2-css-design.html">CSS Positioning</a><br><p class="date">June 20, 2015</p></li>
+    <li><a href="t3-arrays-hashes.html">Arrays and Hashes</a><br><p class="date">June 25, 2015</p></li>
+  <li><a href="c3-thinking-style.html">Thinking Style and Learning</a><br><p class="date">June 25, 2015</p></li>
+  <li><a href="t4-enumerable-methods.html">Enumerable Method</a><br><p class="date">July 10, 2015</p></li>
+   <li><a href="c4-tech-issues.html">Diversity in Tech</a><br><p class="date">July 10, 2015</p></li>
 </ol>
   </section>
 
