--- a/c3-thinking-style.html
+++ b/c3-thinking-style.html
@@ -30,8 +30,7 @@
 <p>Week 3 at DBC is coming to an end! It has been a challenging and rewarding experience so far. While working through a number of challenges, I discovered the importance of understanding my strengths and weaknesses when it comes to learning. After taking Anthony Gregorc's quiz on personal thinking styles, I learned that my thinking style is <b>concrete sequential</b>.The table below provides a description of my thinking style.</p>
 
 <section id="thinking_style">
-  <section id="title">Concrete Sequential Thinking Style
-  </section>
+  <section id="title">Concrete Sequential Thinking Style</section>
 
   <ul>
     <li>order</li>
