--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,7 @@
   </section>
  <div class="line_break"></div>
 
-  <h1 id="HeadingIndexPage">Aspiring Web Developer</h1>
-  <p><span style="font-size:30px">Follow my journey as I learn new skills at Dev Bootcamp!</span></p>
+  <h1 id="HeadingIndexPage">Coming Soon!</h1>
 
 
 <section id="icons">
