--- a/c4-tech-issues.html
+++ b/c4-tech-issues.html
@@ -23,7 +23,7 @@
 <h3 id="Date">July 10, 2015</h3>
 
 <section id="blogs">
-  <section id="quote"><blockquote>In the future there will be no female leaders. There will just be leaders.</blockquote><p><i>Sheryl Sandberg</i></p>
+  <section id="quote"><blockquote>In the future there will be no female leaders. There will just be leaders.</blockquote><p id="smallquote"><i>Sheryl Sandberg</i></p>
   </section>
   <hr>
 <p>The lack of diversity in technology is an important, ongoing issue that plagues the tech community. While tools are being implemented in an effort to increase the number of women and minorities in the tech workforce, the reality is that the field is still dominated by white males.
@@ -31,13 +31,13 @@
 <h5> What the Numbers Look Like</h5>
 <p>The Wall Street Journal published an <a href="http://graphics.wsj.com/diversity-in-tech-companies/">Diversity in Tech</a> article which showed the breakdown of the number of women and minorities in tech jobs worldwide at eight large technology companies (shown below). The numbers show that women do not even represent 25% of the tech workforce. While Asians make-up a large percentage of the jobs for minorities at these tech companies, Hispanics and African Americans do not even contribute to 10% of the workforce.</p>
 
-  <p><img src="Women.png"style="width:800px;height:517px";></p>
+  <img src="Women.png"style="width:800px;height:517px";>
 
-  <p><img src="Minority.png"style="width:800px;height:517px";></p>
+ <img src="Minority.png"style="width:800px;height:517px";>
 
 
 <h5>What's Being Done</h5>
-<p>While a great deal of work still needs to be done to address the issue of lack of diversity in tech, changes are taking place. Big tech companies like Google and Facebook are trying to hire more female interns, provide more funding to schools that have a large percentage of women and minorities, and establish mentorship programs. In addition, some of these tech companies also provide workshops which promote equality in the workplace. Furthermore, female roles models such as Sheryl Sandberg and Malala Yousafzai are inspiring women to stand up for education and leadership roles in the workplace. These small steps towards increasing diversity are pivotal, and if we continue these efforts with more fervor, the numbers might start to look more balanced.
+<p>While a great deal of work still needs to be done to address the issue of lack of diversity in tech, changes are taking place. Big tech companies like Google and Facebook are trying to hire more female interns, provide more funding to schools that have a large percentage of women and minorities, and establish mentorship programs. In addition, a number of these tech companies also provide workshops which promote equality in the workplace. Furthermore, female roles models such as Sheryl Sandberg and Malala Yousafzai are inspiring women to stand up for education and leadership roles in the workplace. These small steps towards increasing diversity are pivotal, and if we continue these efforts with more fervor, the numbers might start to look more balanced.
 
 <h5>Why It's Important</h5>
 <p>
