--- a/blogposts.html
+++ b/blogposts.html
@@ -32,6 +32,8 @@
   <li><a href="c3-thinking-style.html">Thinking Style and Learning</a><br><p class="date">June 25, 2015</p></li>
   <li><a href="t4-enumerable-methods.html">Enumerable Method</a><br><p class="date">July 10, 2015</p></li>
    <li><a href="c4-tech-issues.html">Diversity in Tech</a><br><p class="date">July 10, 2015</p></li>
+   <li><a href="c5-feedback.html">Pairing and Giving Feedback</a><br><p class="date">July 17, 2015</p></li>
+   <li><a href="t5-ruby-classes.html">Ruby Classes</a><br><p class="date">July 17, 2015</p></li>
 </ol>
   </section>
 
