--- a/c3-thinking-style.html
+++ b/c3-thinking-style.html
@@ -24,7 +24,7 @@
 
 
 <section id="blogs">
-  <section id="quote"><blockquote>It's not what you are that holds you back, it's what you think you are not. </blockquote><p><i>Denis Waitley</i></p>
+  <section id="quote"><blockquote>It's not what you are that holds you back, it's what you think you are not. </blockquote><p id="smallquote"><i>Denis Waitley</i></p>
   </section>
   <hr>
 <p>Week 3 at DBC is coming to an end! It has been a challenging and rewarding experience so far. While working through a number of challenges, I discovered the importance of understanding my strengths and weaknesses when it comes to learning. After taking Anthony Gregorc's quiz on personal thinking styles, I learned that my thinking style is <b>concrete sequential</b>.The table below provides a description of my thinking style.</p>
