--- a/t3-arrays-hashes.html
+++ b/t3-arrays-hashes.html
@@ -25,7 +25,7 @@
 <section id="blogs">
 
 <section id="quote"><blockquote>Why did the programmer quit his job?</blockquote>
-<p><span style="font-size:25px">Because he didn't get arrays</span></p>
+<p id="smallquote"><span style="font-size:25px">Because he didn't get arrays</span></p>
 </section>
 <hr>
 
@@ -34,19 +34,19 @@
 <h5>Arrays</h5>
 <p>Arrays are collections of objects (such as strings, numbers, hashes, arrays, classes, Booleans, etc.) that are ordered by index numbers. Each index points to a different object, and the numbering starts at 0. The end of an array numbering starts at -1. Arrays are more useful when the order is important.</p>
 
-<p><img src="Array1.png"/></p>
+<img src="Array1.png"/>
 
-<p>To access a specfic object in an array, you refer to the object's index number.
-<p><img src="Array2.png"/></p>
+<p>To access a specfic object in an array, you refer to the object's index number.</p>
+<img src="Array2.png"/>
 
 
 <h5>Hashes</h5>
 <p>Hashes are a list of objects that are sorted by key-value pairs. The key can be any object from a number to a string. For a hash, every key is unique; however, values can be reused multiple times. Hashes track the order in which key-value pairs are created. With hashes, you can quickly look up an object based on its key rather than its index. Hashes are typically more useful when dealing with unordered lists.</p>
 
-<p><img src="Hash1.png"/></p>
+<img src="Hash1.png"/>
 
 <p>To access a specfic object in a hash, you refer to the object's key.</p>
-<p><img src="Hash2.png"/></p>
+<img src="Hash2.png"/>
 
 
   </section>
