--- a/t5-ruby-classes.html
+++ b/t5-ruby-classes.html
@@ -25,7 +25,7 @@
 <section id="blogs">
 
 <p>Classes allow you to organize objects with similar attributes and methods. To get a better understanding of how classes work, we can look at a real life example. Let's say you are a health enthusiast who is starting your own smoothie business. You have the following three extraordinary items on your menu: orange  banana peach smoothie, orange juice, and mango banana smoothie. Each drink is priced at three dollars. It can get tricky trying to run a business. You need to keep track of your inventory, the number of drinks ordered in a day, and the amount of money made in a day. You accomplish this by creating a program that manages your business.</p>
-<img src="menu.png">
+<img src="Menu.png">
 
 
 <!-- <img src="smoothie.jpg"style="width:400px;height:400px";> -->
