--- a/blogposts.html
+++ b/blogposts.html
@@ -34,6 +34,8 @@
    <li><a href="c4-tech-issues.html">Diversity in Tech</a><br><p class="date">July 10, 2015</p></li>
    <li><a href="c5-feedback.html">Pairing and Giving Feedback</a><br><p class="date">July 17, 2015</p></li>
    <li><a href="t5-ruby-classes.html">Ruby Classes</a><br><p class="date">July 17, 2015</p></li>
+   <li><a href="c6-stereotype-threat.html">Stereotype Threat</a><br><p class="date">July 24, 2015</p></li>
+   <li><a href="t6-oop-concepts.html">Inheritance</a><br><p class="date">July 25, 2015</p></li>
 </ol>
   </section>
 
