--- a/blogposts.html
+++ b/blogposts.html
@@ -13,7 +13,7 @@
     <li><a href="index.html" class="menubar">Home</a></li>
     <li><a href="blogposts.html" class="menubar">Blog Posts</a></li>
     <li><a href="" class="menubar">Projects</a></li>
-    <li><a href="" class="menubar">Interesting Links</a></li>
+    <li><a href="resume.html" class="menubar">Resume</a></li>
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
   </ul>
