--- a/c6-stereotype-threat.html
+++ b/c6-stereotype-threat.html
@@ -12,7 +12,7 @@
     <li><a href="index.html" class="menubar">Home</a></li>
     <li><a href="blogposts.html" class="menubar">Blog Posts</a></li>
     <li><a href="projects.html" class="menubar">Projects</a></li>
-    <li><a href="interestinglinks.html" class="menubar">Interesting Links</a></li>
+    <li><a href="resume.html" class="menubar">Resume</a></li>
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
   </ul>
@@ -30,7 +30,7 @@
 
 <p> As a result of these life experiences, I quickly created my identity. I was a science nerd who was decent (not great) at writing. I was also someone who would never be very athletic or excel at math. These were my labels, and I stuck to them. They literally defined me, and there was no way they would change. I seized any opportunity I had to validate my identity. Since I labled myself as someone who exceled in my science classes, I typically put in more effort for those classes, and I had greater confidence in myself. In contrast, fitness was never designed to be my area of expertise. If I collapsed after doing a push-up, I confirmed my belief that I was not a fit, athletic person.</p>
 
-<p>It's really hard to break your identity. Because when that happens, you suddenly have to question who you are. It makes you face your deepest fears. Suddenly, you realize maybe you are capable of achieving more than you thought possible. While it is a discomforting feeling, it is also incredibly liberating. You are not defined by what anybody tells you. You can be whoever you want. For me, this is a learning process. I still hold on to a lot of irrational beliefs that limit my abilities. However, I am also learning to vindicate some of the invalid ideas that I held as the solid truth for so many years. I can proudly say I can do more than one push-up (yay!), and I'm pursuing a career that requires logical thinking. Once I let go of who I think I am supposed to be, I can finally be myself.<p>
+<p>It's really hard to break your identity. Because when that happens, you suddenly have to question who you are. It makes you face your deepest fears. You realize maybe you are capable of achieving more than you thought possible. While it is a discomforting feeling, it is also incredibly liberating. You are not defined by what anybody tells you. You can be whoever you want. For me, this is a learning process. I still hold on to a lot of irrational beliefs that limit my abilities. However, I am also learning to fight some of the invalid ideas that I held as the solid truth for so many years. I can proudly say I can do more than one push-up (yay!), and I'm pursuing a career that requires logical thinking. Once I let go of who I think I am supposed to be, I can finally be myself.<p>
   </section>
   </body>
 </html>
