--- a/blogposts.html
+++ b/blogposts.html
@@ -36,6 +36,7 @@
    <li><a href="t5-ruby-classes.html">Ruby Classes</a><br><p class="date">July 17, 2015</p></li>
    <li><a href="c6-stereotype-threat.html">Stereotype Threat</a><br><p class="date">July 24, 2015</p></li>
    <li><a href="t6-oop-concepts.html">Inheritance</a><br><p class="date">July 25, 2015</p></li>
+   <li><a href="c7-values.html">Affirmation and Stereotype Threat</a><br><p class="date">August 1, 2015</p></li>
 </ol>
   </section>
 
