--- a/c5-feedback.html
+++ b/c5-feedback.html
@@ -19,7 +19,7 @@
   </section>
    <div class="line_break"></div>
 
-<h1 id="Heading">Ruby Classes</h1>
+<h1 id="Heading">Pairing and Giving Feedback</h1>
 <h3 id="Date">July 17, 2015</h3>
 
 <section id="blogs">
