--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
   <head>
    <title>Priyanka's Website
     </title>
-    <link href="index.css" rel="stylesheet" type="text/css">
+    <link href="MainBlogPage.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -17,22 +17,17 @@
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
   </ul>
+
   </section>
- <div class="line_break"></div>
+   <div class="line_break"></div>
 
-  <h1 id="HeadingIndexPage">Coming Soon!</h1>
+<h1 id="Heading">Projects</h1>
 
-
-<section id="icons">
-<ul>
-<li><a href="https://www.github.com/psaigal"><img src="webicon-github.png"/></a></li>
-<li><a href="https://www.linkedin.com/pub/priyanka-saigal/56/4ab/503"><img src="webicon-linkedin.png"/></a></li>
-<li><a href="https://plus.google.com/100529383494509522614/posts"><img src="webicon-googleplus.png"/></a></li>
-<li><a href="https://twitter.com/priyankasaigal"><img src="webicon-twitter.png"/></a></li>
-</ul>
- </section>
-
-
+<section id="blogs">
+  <ol>
+  <li><a href="treasurechest.html">Find the Treasure!</a><br><p class="date">August 1, 2015</p></li>
+</ol>
+  </section>
 
 
 
