--- a/treasurechest.html
+++ b/treasurechest.html
@@ -41,7 +41,7 @@
   <script src="treasurechest.js"></script>
 </body>
 
-<section id="website"><a href="psaigal.github.io/projects.html">Back to Projects</a>
+<section id="website"><a href="psaigal.github.io/projects">Back to Projects</a>
 </section>
 
 </html>
