--- a/blogposts.html
+++ b/blogposts.html
@@ -12,7 +12,7 @@
   <ul>
     <li><a href="index.html" class="menubar">Home</a></li>
     <li><a href="blogposts.html" class="menubar">Blog Posts</a></li>
-    <li><a href="" class="menubar">Projects</a></li>
+    <li><a href="projects.html" class="menubar">Projects</a></li>
     <li><a href="resume.html" class="menubar">Resume</a></li>
     <li><a href="aboutme.html" class="menubar">About Me</a></li>
     <li><a href="contact.html" class="menubar">Contact</a></li>
@@ -37,11 +37,8 @@
    <li><a href="c6-stereotype-threat.html">Stereotype Threat</a><br><p class="date">July 24, 2015</p></li>
    <li><a href="t6-oop-concepts.html">Inheritance</a><br><p class="date">July 25, 2015</p></li>
    <li><a href="c7-values.html">Affirmation and Stereotype Threat</a><br><p class="date">August 1, 2015</p></li>
+   <li><a href="t7-JavaScript.html">Ruby Hashes vs. JavaScript Objects</a><br><p class="date">August 2, 2015</p></li>
 </ol>
   </section>
-
-
-
-
   </body>
 </html>
