--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,8 @@
 
 <section id="blogs">
   <ol>
-  <li><a href="treasurechest.html">Find the Treasure!</a><br><p class="date">August 1, 2015</p></li>
+  <li><a href="treasurechest.html">Find the Treasure!</a><br></li>
+  <li><a href="todo.html">To-Do List</a><br></li>
 </ol>
   </section>
 
