--- a/t7-JavaScript.html
+++ b/t7-JavaScript.html
@@ -33,7 +33,7 @@
 <h5>Javascript Objects</h5>
 <p>Below, an object is assigned to the variable <i>familyDog</i>. The properties of the object are the variables <i>name</i>, <i>age</i>, <i>furColor</i>, and <i>eyeColor</i>. The values are shown after the colon. While the key values can be a Javascript data type such as a string, integer, or boolean, the properties are always variables. Each property is separated by a comma, except for the final one. To access an objects value, use object.property. To assign a new value to an object's property, you simply set the object.property to equal the new value. To delete an object's property(age in this case), use <i>delete</i>. You can see that the property and its value are removed from the object.</p>
 
-<img src="objectJS.png"/>
+<img src="ObjectJS.png"/>
 
 <h5>Ruby Hashes</h5>
 <p>Ruby hashes allows you to store information using key value pairs. Unlike Javascript, the keys in Ruby hashes do not have to be variables. In addition, the key value pairs are not separated by a colon. Fetching and changing values are done in a similar manner to Javascript objects. To delete a property, you use the delete method.</p>
