--- a/blogposts.html
+++ b/blogposts.html
@@ -38,6 +38,7 @@
    <li><a href="t6-oop-concepts.html">Inheritance</a><br><p class="date">July 25, 2015</p></li>
    <li><a href="c7-values.html">Affirmation and Stereotype Threat</a><br><p class="date">August 1, 2015</p></li>
    <li><a href="t7-JavaScript.html">Ruby Hashes vs. JavaScript Objects</a><br><p class="date">August 2, 2015</p></li>
+   <li><a href="c8-conflict.html">Conflict</a><br><p class="date">August 7, 2015</p></li>
 </ol>
   </section>
   </body>
