--- a/projects.html
+++ b/projects.html
@@ -24,10 +24,11 @@
 <h1 id="Heading">Projects</h1>
 
 <section id="blogs">
-  <ol>
+  <ul>
   <li><a href="treasurechest.html">Find the Treasure!</a><br></li>
+  <li><a href="cheatsheet.html">Looping in Ruby and JavaScript</a><br></li>
   <li><a href="todo.html">To-Do List</a><br></li>
-</ol>
+</ul>
   </section>
 
 
