--- a/aboutme.html
+++ b/aboutme.html
@@ -20,16 +20,16 @@
   </section>
  <div class="line_break"></div>
 
-<!--  <h1 id="Heading">About Me</h1> -->
-<p id="Logo"><img src="AboutMeLogo.png"></p>
+<p id="photo"><img src="Photo.jpg" style="width:100%;height:100%";></p>
+
+<section id="Logo"><img src="aboutt.png" style="width:90%; height:90%"></section>
 <br>
-<p><section id="intro"><p id="photo"><img src="Photo.jpg" style="width:300px;height:355px";></p>
+<p><section id="intro">
 
 
-<p>Welcome to my page! I am passionate about changing the world through technology. In seventh grade, I made my first weblog through a site called Xanga. I remember the excitement I felt as I designed my  personal web page. Using LissaExplains.com, I learned how to use HTML and CSS to customize my own page. My elaborate creations included flashy banners, butterfly cursors, and snow falling on my page. While my web development skills were raw to say the least, the passion I felt was undeniable.</p>
+<p>Welcome to my page! I am passionate about changing the world through technology. In seventh grade, I made my first weblog through a site called Xanga. I remember the excitement I felt as I designed my  personal web page. Using LissaExplains.com, I learned how to use HTML, CSS, and JavaScript to customize my own page. My elaborate creations included flashy banners, butterfly cursors, and snow falling on my page. While my web development skills were raw to say the least, the passion I felt was undeniable.</p>
 
-<p>I took a break from all things web related when I attended college in southern California. After graduating with a degree in biology and working in medical sales for two years, I began researching different silicon valley healthcare companies and the cutting-edge
-products they were developing. These incredible products were positively changing people's lives all over the world. I became inspired by what I was seeing, and I decided that I want to create technology that will positively impact the world. Reminiscing about my 7th grade days, I remembered the passion I had for self-teaching and creating. I realized I could take my passion and apply it to an important cause. I am currently enrolled in Dev Bootcamp where I am learning valuable skills to become a confident web developer!</p>
+<p>I took a break from all things web related when I attended college in southern California. After graduating with a degree in biology and working in medical sales for two years, I began researching different silicon valley healthcare companies and the cutting-edge products they were developing. These incredible products were positively changing people's lives all over the world. I became inspired by what I was seeing, and I decided that I want to create technology that will positively impact the world. Reminiscing about my 7th grade days, I remembered the passion I had for self-teaching and creating. I realized I could take my passion and apply it to an important cause. I am currently enrolled in Dev Bootcamp where I am learning valuable skills to become a confident web developer!</p>
 
 
 
